FIxed Bug with Portfolio Banner on Safari

--- a/src/styles/portfolioPages.css
+++ b/src/styles/portfolioPages.css
@@ -213,7 +213,7 @@
 
   height: 20rem;
 
-  width: 90%;
+  width: 100%;
 
   background-position: center;
   background-repeat: no-repeat;
